tests/ui/lang/issue-46.stderr
error: cannot cast between pointer types
       from `*i32`
         to `*[i32; 2]`
 --> $DIR/issue-46.rs:7:13
  |
7 |     let x = [[1; 2]; 1];
  |             ^^^^^^^^^^^
  |
note: used from within `issue_46::main`
 --> $DIR/issue-46.rs:7:13
  |
7 |     let x = [[1; 2]; 1];
  |             ^^^^^^^^^^^
note: called by `main`
 --> $DIR/issue-46.rs:6:8
  |
6 | pub fn main() {
  |        ^^^^

x
error: aborting due to 1 previous error

