tests/ui/lang/issue-46.rs
// build-pass

use spirv_std::spirv;

#[spirv(fragment)]
pub fn main() {
    let x = [[1; 2]; 1];
}
